replace identity server certificate with a new one

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -122,7 +122,7 @@
       "Type": "File",
       "FilePath": "idsrv4cert.pfx",
       "Base64Certificate": "",
-      "Password": "idsrv3test"
+      "Password": "7Oeg&tV^S:G_Td"
     },
     "Password": {
       "RequireDigit": false,
