#5 Use RequireClientSecret = false

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -68,11 +68,6 @@
         "ClientId": "web-client",
         "ClientName": "TemplateApp Web Client",
         "Profile": "IdentityServerSPA",
-        "ClientSecrets": [
-          {
-            "Value": "ks1t6K4g75gOrMTfloMuHZluDw5QkMEokJyeEC4xGHk="
-          }
-        ],
         "AllowedGrantTypes": [
           "password",
           "external"
@@ -85,9 +80,10 @@
         "AllowOfflineAccess": true,
         "AccessTokenLifetime": 3600,
         "SlidingRefreshTokenLifetime": 1296000,
+        "AbsoluteRefreshTokenLifetime": 63072000,
         "RefreshTokenExpiration": 0,
         "RequireConsent": false,
-        "RequireClientSecret": true,
+        "RequireClientSecret": false,
         "UpdateAccessTokenClaimsOnRefresh": true
       },
       {
