--- a/.editorconfig
+++ b/.editorconfig
@@ -163,7 +163,9 @@ ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
 
 [{*.ats,*.ts}]
-ij_continuation_indent_size = 4
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 2
 ij_typescript_align_imports = false
 ij_typescript_align_multiline_array_initializer_expression = false
 ij_typescript_align_multiline_binary_operation = false
@@ -210,7 +212,7 @@ ij_typescript_for_brace_force = never
 ij_typescript_for_statement_new_line_after_left_paren = false
 ij_typescript_for_statement_right_paren_on_new_line = false
 ij_typescript_for_statement_wrap = off
-ij_typescript_force_quote_style = true
+ij_typescript_force_quote_style = false
 ij_typescript_force_semicolon_style = false
 ij_typescript_function_expression_brace_style = end_of_line
 ij_typescript_if_brace_force = never
@@ -320,7 +322,7 @@ ij_typescript_ternary_operation_signs_on_next_line = false
 ij_typescript_ternary_operation_wrap = off
 ij_typescript_union_types_wrap = on_every_item
 ij_typescript_use_chained_calls_group_indents = false
-ij_typescript_use_double_quotes = never
+ij_typescript_use_double_quotes = false
 ij_typescript_use_explicit_js_extension = global
 ij_typescript_use_path_mapping = always
 ij_typescript_use_public_modifier = false
