--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@fluentui/react": "^8.36.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@lottiefiles/jlottie": "^1.1.0",
     "@material-ui/core": "^4.11.4",
     "@microsoft/signalr": "^5.0.6",
     "@reduxjs/toolkit": "^1.5.1",
@@ -14,7 +15,6 @@
     "@statoscope/webpack-plugin": "^5.6.2",
     "@tippyjs/react": "^4.2.5",
     "@types/react-copy-to-clipboard": "^5.0.0",
-    "@types/react-lottie": "^1.2.5",
     "@types/react-paginate": "^7.1.0",
     "@types/react-table": "^7.7.6",
     "axios": "0.21.1",
@@ -29,7 +29,6 @@
     "js-base64": "3.6.0",
     "js-logger": "1.6.1",
     "jwt-decode": "^3.1.2",
-    "lottie-react-web": "2.2.2",
     "nswag": "13.11.3",
     "query-string": "^7.0.0",
     "rc-tooltip": "^5.1.0",
@@ -40,7 +39,6 @@
     "react-hook-form": "^7.17.2",
     "react-i18next": "11.8.15",
     "react-js-pagination": "^3.0.3",
-    "react-lottie": "1.2.3",
     "react-paginate": "^7.1.3",
     "react-query": "3.25.1",
     "react-query-swagger": "13.11.6",
