--- a/webapi/Lib/PersistenceHelpers/MccSoft.PersistenceHelpers/MccSoft.PersistenceHelpers.csproj
+++ b/webapi/Lib/PersistenceHelpers/MccSoft.PersistenceHelpers/MccSoft.PersistenceHelpers.csproj
@@ -1,23 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <noWarn>1591</noWarn>
-    <Description>
-      Contains classes to help with different persistence-level manipulations and checks.
-      Like automatically throwing ResourceNotFoundException in case of missing entry in database.
-    </Description>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+        <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+        <noWarn>1591</noWarn>
+        <Description>
+            Contains classes to help with different persistence-level manipulations and checks.
+            Like automatically throwing ResourceNotFoundException in case of missing entry in database.
+        </Description>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10"/>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\DomainHelpers\MccSoft.DomainHelpers\MccSoft.DomainHelpers.csproj" />
-    <ProjectReference Include="..\..\LowLevelPrimitives\MccSoft.LowLevelPrimitives\MccSoft.LowLevelPrimitives.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\DomainHelpers\MccSoft.DomainHelpers\MccSoft.DomainHelpers.csproj"/>
+        <ProjectReference Include="..\..\LowLevelPrimitives\MccSoft.LowLevelPrimitives\MccSoft.LowLevelPrimitives.csproj"/>
+    </ItemGroup>
 
 </Project>
