update appsettings (IdentityServer's Clients)

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -79,8 +79,8 @@
         ],
         "AllowOfflineAccess": true,
         "AccessTokenLifetime": 3600,
-        "SlidingRefreshTokenLifetime": 1296000,
-        "AbsoluteRefreshTokenLifetime": 63072000,
+        "SlidingRefreshTokenLifetime": 31536000,
+        "AbsoluteRefreshTokenLifetime": 315360000,
         "RefreshTokenExpiration": 0,
         "RequireConsent": false,
         "RequireClientSecret": false,
@@ -107,10 +107,10 @@
         ],
         "AllowOfflineAccess": true,
         "AccessTokenLifetime": 3600,
-        "SlidingRefreshTokenLifetime": 1296000,
+        "SlidingRefreshTokenLifetime": 31536000,
         "RefreshTokenExpiration": 0,
         "RequireConsent": false,
-        "RequireClientSecret": true,
+        "RequireClientSecret": false,
         "UpdateAccessTokenClaimsOnRefresh": true
       }
     ],
