--- a/webapi/Lib/Health/MccSoft.Health/MccSoft.Health.csproj
+++ b/webapi/Lib/Health/MccSoft.Health/MccSoft.Health.csproj
@@ -10,9 +10,9 @@
   <ItemGroup>
     <PackageReference Include="App.Metrics.Health.Extensions.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="App.Metrics.AspNetCore" Version="4.2.0" />
-    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="4.0.0-preview1.0.3" />
-    <PackageReference Include="MassTransit" Version="5.2.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="4.3.0-preview.0.34" />
+    <PackageReference Include="MassTransit" Version="7.2.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="4.2.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Health" Version="3.2.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="4.2.0" />
