--- a/webapi/tests/MccSoft.TemplateApp.ComponentTests/MccSoft.TemplateApp.ComponentTests.csproj
+++ b/webapi/tests/MccSoft.TemplateApp.ComponentTests/MccSoft.TemplateApp.ComponentTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
@@ -12,22 +12,22 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
-    <PackageReference Include="EasyNetQ.Management.Client" Version="1.3.0" />
-    <PackageReference Include="ErikEJ.EntityFrameworkCore.DgmlBuilder" Version="5.0.0-preview1" />
+    <PackageReference Include="EasyNetQ.Management.Client" Version="1.4.0" />
+    <PackageReference Include="ErikEJ.EntityFrameworkCore.DgmlBuilder" Version="6.0.0" />
     <PackageReference Include="JsonKnownTypes" Version="0.5.4" />
-    <PackageReference Include="NJsonSchema" Version="10.4.4" />
-    <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="13.11.1" />
-    <PackageReference Include="NSwag.Generation" Version="13.11.1" />
-    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="13.11.1" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.10" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="Moq" Version="4.15.2" />
-    <PackageReference Include="System.IO.Pipelines" Version="5.0.1" />
+    <PackageReference Include="NJsonSchema" Version="10.5.2" />
+    <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="13.14.3" />
+    <PackageReference Include="NSwag.Generation" Version="13.14.3" />
+    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="13.14.3" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="System.IO.Pipelines" Version="6.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
