--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
     "react-query": "3.25.1",
-    "react-query-swagger": "13.11.7",
+    "react-query-swagger": "13.13.2",
     "react-redux": "7.2.5",
     "react-router": "6.0.1",
     "react-router-dom": "6.0.1",
@@ -93,7 +93,7 @@
     "typecheck": "tsc",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /runtime:Net50 /input:http://localhost:48728/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn replace \"this\\.(\\\\w*?)\\.toISOString\\\\(\\\\) : <any>undefined\" \"this.\\$1.toISOString() : this.\\$1\" src/services/api/api-client.ts  && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
-    "generate-api-client-dotnet": "nswag openapi2csclient /runtime:Net50 /input:http://localhost:48728/swagger/v1/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
+    "generate-api-client-dotnet": "nswag openapi2csclient /runtime:Net50 /input:http://localhost:48728/swagger/v1/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
     "analyze-statoscope": "STATS=1 react-app-rewired build",
     "analyze-sourcemap-size": "source-map-explorer build/static/js/*.js"
   },
