--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "concurrently": "^6.1.0",
     "cross-env": "7.0.3",
     "date-fns": "^2.21.3",
+    "dotenv": "^10.0.0",
     "i18next": "21.5.4",
     "i18next-http-backend": "^1.3.1",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "js-base64": "3.6.0",
     "js-logger": "1.6.1",
     "jwt-decode": "^3.1.2",
+    "nock": "^13.2.1",
     "nswag": "13.11.3",
     "query-string": "^7.0.0",
     "rc-tooltip": "^5.1.0",
