adjust naming for InstanceName for Serilog

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -4,8 +4,7 @@
       "Server": "logs-01.loggly.com",
       "Port": 443,
       "Token": "b2a89f6a-666d-4825-977c-79499bc958c5",
-      "InstanceName": "server1",
-      "ApplicationName": "server1"
+      "InstanceName": "server1"
     },
     "MinimumLevel": {
       "Default": "Information",
