use DateLocal, remove TimezoneIndependent* serializers integrate locales on frontend

--- a/webapi/Lib/LowLevelPrimitives/MccSoft.LowLevelPrimitives/MccSoft.LowLevelPrimitives.csproj
+++ b/webapi/Lib/LowLevelPrimitives/MccSoft.LowLevelPrimitives/MccSoft.LowLevelPrimitives.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\..\Logging\MccSoft.Logging\MccSoft.Logging.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Serialization" />
+  </ItemGroup>
+
 </Project>
