--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "cross-env": "7.0.3",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
-    "i18next": "21.5.4",
+    "i18next": "21.6.0",
+    "i18next-browser-languagedetector": "6.1.2",
     "i18next-http-backend": "^1.3.1",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "js-base64": "3.6.0",
@@ -38,7 +39,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.19.0",
-    "react-i18next": "11.14.2",
+    "react-i18next": "11.15.0",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
     "react-query": "3.25.1",
