store Auth outside of redux. sync auth data between tabs

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -77,7 +77,7 @@
           "MccSoft.TemplateApp.AppAPI"
         ],
         "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 3600,
+        "AccessTokenLifetime": 10,
         "SlidingRefreshTokenLifetime": 31536000,
         "AbsoluteRefreshTokenLifetime": 315360000,
         "RefreshTokenExpiration": 0,
@@ -100,8 +100,9 @@
           "MccSoft.TemplateApp.AppAPI"
         ],
         "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 3600,
+        "AccessTokenLifetime": 10,
         "SlidingRefreshTokenLifetime": 31536000,
+        "AbsoluteRefreshTokenLifetime": 315360000,
         "RefreshTokenExpiration": 0,
         "RequireConsent": false,
         "RequireClientSecret": false,
