--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "browser-tabs-lock": "^1.2.15",
     "change-case": "^4.1.2",
     "concurrently": "5.2.0",
     "copyfiles": "2.3.0",
