#7 migrate to openiddict

--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -1,8 +1,8 @@
 EMAIL=templateapp@mcc-tomsk.de
 VIRTUAL_HOST=template.mcc-tomsk.de
-SENTRY_DSN=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
-LOGGING_SERVER=logs-01.loggly.com
-LOGGING_PORT=443
-LOGGING_TOKEN=b2a89f6a-666d-4825-977c-79499bc958c5
-LOGGING_INSTANCE=dev
+Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
+Serilog__Remote__Server=logs-01.loggly.com
+Serilog__Remote__Port=443
+Serilog__Remote__Token=b2a89f6a-666d-4825-977c-79499bc958c5
+Serilog__Remote__InstanceName=dev
 POSTGRES_DATABASE=template_app
