--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -24,6 +24,10 @@
   "MetricsOptions": {
     "Enabled": true
   },
+  "DefaultUser": {
+    "Username": "admin",
+    "Password": "123"
+  },
   "HealthEndpointsOptions": {
     "HealthEndpointEnabled": true,
     "PingEndpointEnabled": true
