--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -53,67 +53,20 @@
     "Description": "This is documentation of TemplateApp API",
     "Title": "TemplateApp API",
     "Version": "v1.0.0",
-    "BasePath": "/",
-    "ClientPublicKey": "2f82d89b-4f55-4b15-8a53-80df38b751ec"
+    "BasePath": "/"
   },
   "Sentry": {
     "Dsn": "",
     "ApiKey": ""
   },
-  "IdentityServer": {
-    "Clients": [
-      {
-        "Enabled": true,
-        "ClientId": "web-client",
-        "ClientName": "TemplateApp Web Client",
-        "Profile": "IdentityServerSPA",
-        "AllowedGrantTypes": [
-          "password",
-          "external"
-        ],
-        "AllowedScopes": [
-          "profile",
-          "offline",
-          "MccSoft.TemplateApp.AppAPI"
-        ],
-        "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 3600,
-        "SlidingRefreshTokenLifetime": 31536000,
-        "AbsoluteRefreshTokenLifetime": 315360000,
-        "RefreshTokenExpiration": 0,
-        "RequireConsent": false,
-        "RequireClientSecret": false,
-        "UpdateAccessTokenClaimsOnRefresh": true
-      },
-      {
-        "Enabled": true,
-        "ClientId": "mobile-client",
-        "ClientName": "TemplateApp Mobile Patient Client",
-        "Profile": "IdentityServerSPA",
-        "AllowedGrantTypes": [
-          "password",
-          "external"
-        ],
-        "AllowedScopes": [
-          "profile",
-          "offline",
-          "MccSoft.TemplateApp.AppAPI"
-        ],
-        "AllowOfflineAccess": true,
-        "AccessTokenLifetime": 3600,
-        "SlidingRefreshTokenLifetime": 31536000,
-        "AbsoluteRefreshTokenLifetime": 315360000,
-        "RefreshTokenExpiration": 0,
-        "RequireConsent": false,
-        "RequireClientSecret": false,
-        "UpdateAccessTokenClaimsOnRefresh": true
-      }
-    ],
-    "Key": {
-      "Type": "File",
-      "FilePath": "idsrv4cert.pfx",
+  "OpenId": {
+    "SigningCertificate": {
       "Base64Certificate": "",
-      "Password": "7Oeg&tV^S:G_Td"
+      "Password": ""
+    },
+    "EncryptionCertificate": {
+      "Base64Certificate": "",
+      "Password": ""
     },
     "Password": {
       "RequireDigit": false,
