--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,15 +28,19 @@ services:
       - LETSENCRYPT_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_EMAIL=${EMAIL}
       - ConnectionStrings__DefaultConnection=${CONNECTION_STRING}
-      - IdentityServer__Key__Password=${IdentityServer_Password}
-      - IdentityServer__Key__Base64Certificate=${IdentityServer_Base64Certificate}
-      - REACT_APP_SENTRY_DSN=${SENTRY_DSN}
-      - Sentry__Dsn=${SENTRY_DSN}
-      - Serilog__Remote__Server=${LOGGING_SERVER}
-      - Serilog__Remote__Port=${LOGGING_PORT}
-      - Serilog__Remote__Token=${LOGGING_TOKEN}
-      - Serilog__Remote__InstanceName=${LOGGING_INSTANCE}
-      - SignUrl__Secret=${SIGN_URL_SECRET}
+      - OpenId__SigningCertificate__Base64Certificate=${OpenId__SigningCertificate__Base64Certificate}
+      - OpenId__SigningCertificate__Password=${OpenId__SigningCertificate__Password}
+      - OpenId__EncryptionCertificate__Base64Certificate=${OpenId__EncryptionCertificate__Base64Certificate}
+      - OpenId__EncryptionCertificate__Password=${OpenId__EncryptionCertificate__Password}
+      - Hangfire__DashboardPassword=${Hangfire__DashboardPassword}
+      - Hangfire__DashboardPassword=${Hangfire__DashboardPassword}
+      - REACT_APP_SENTRY_DSN=${Sentry__Dsn}
+      - Sentry__Dsn=${Sentry__Dsn}
+      - Serilog__Remote__Server=${Serilog__Remote__Server}
+      - Serilog__Remote__Port=${Serilog__Remote__Port}
+      - Serilog__Remote__Token=${Serilog__Remote__Token}
+      - Serilog__Remote__InstanceName=${Serilog__Remote__InstanceName}
+      - SignUrl__Secret=${SignUrl__Secret}
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
