add social login

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -68,6 +68,24 @@
       "Base64Certificate": "",
       "Password": ""
     },
+    "Clients": [
+      {
+        "ClientId": "web_client",
+        "Permissions": [
+          "ept:authorization",
+          "ept:token",
+          "ept:logout",
+          "gt:authorization_code",
+          "gt:password",
+          "gt:refresh_token",
+          "rst:code",
+          "rst:token"
+        ],
+        "RedirectUris": [
+          "https://localhost:5001/auth/openid-callback"
+        ]
+      }
+    ],
     "Password": {
       "RequireDigit": false,
       "RequireUppercase": false,
@@ -79,19 +97,34 @@
     ],
     "ValidateIssuer": false
   },
-
   "Hangfire": {
     "EnableDashboard": false,
     "DashboardUser": "admin",
     "DashboardPassword": "dfZ3yBsPdkm2"
   },
-
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "ClientId": "fd4544ef-8539-42c2-b7ce-af3006d1ff9f",
-    "Authority": "https://login.microsoftonline.com/f093d704-d5a3-4299-9066-378019df1e10/v2.0/",
-    "TenantId": "f093d704-d5a3-4299-9066-378019df1e10",
-    "CallbackPath": "/signin-oidc"
+  "ExternalAuthentication": {
+    "Microsoft": {
+      "ClientId": "ab2ce88f-efef-49c5-b89f-87a87b7dfc2c",
+      "ClientSecret": "wfileLMHY~_~hcONF32735{"
+    },
+    "Facebook": {
+      "ClientId": "2076005142436006",
+      "ClientSecret": "0fd775ac8e566f0a113f096ce42cf63a"
+    },
+    "Google": {
+      "ClientId": "497377001909-v63kflfb7gf26mmug97iinaqr80vr427.apps.googleusercontent.com",
+      "ClientSecret": "XfnbY7kdOqbAUdDrZoE4juwM"
+    },
+    "AzureAd": {
+      "Instance": "https://login.microsoftonline.com/",
+      "ClientId": "fd4544ef-8539-42c2-b7ce-af3006d1ff9f",
+      "Authority": "https://login.microsoftonline.com/f093d704-d5a3-4299-9066-378019df1e10/v2.0/",
+      "TenantId": "f093d704-d5a3-4299-9066-378019df1e10",
+      "CallbackPath": "/signin-oidc"
+    }
+  },
+  "General": {
+    "SiteUrl": "https://templateapp.mcc-soft.de"
   },
   "DefaultUser": {
     "Username": "admin",
