--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,30 +18,31 @@
     "@types/react-table": "^7.7.6",
     "axios": "0.24.0",
     "axios-auth-refresh": "3.2.1",
-    "clsx": "^1.1.1",
-    "concurrently": "^6.1.0",
+    "clsx": "1.1.1",
+    "concurrently": "6.5.1",
     "cross-env": "7.0.3",
-    "date-fns": "^2.21.3",
+    "date-fns": "2.28.0",
     "dotenv": "^10.0.0",
     "i18next": "21.6.0",
     "i18next-browser-languagedetector": "6.1.2",
-    "i18next-http-backend": "^1.3.1",
+    "i18next-http-backend": "1.3.2",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "js-base64": "3.6.0",
     "js-logger": "1.6.1",
-    "jwt-decode": "^3.1.2",
-    "nock": "^13.2.1",
+    "jwt-decode": "3.1.2",
+    "nock": "13.2.4",
     "nswag": "13.11.3",
-    "query-string": "^7.0.0",
-    "rc-tooltip": "^5.1.0",
+    "oidc-client-ts": "2.0.1",
+    "query-string": "7.1.1",
+    "rc-tooltip": "5.1.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.2",
-    "react-hook-form": "^7.19.0",
+    "react-dropzone": "12.0.4",
+    "react-hook-form": "7.19.0",
     "react-i18next": "11.15.0",
-    "react-js-pagination": "^3.0.3",
-    "react-paginate": "^7.1.3",
+    "react-js-pagination": "3.0.3",
+    "react-paginate": "8.1.2",
     "react-query": "3.25.1",
     "react-query-swagger": "13.13.3",
     "react-redux": "7.2.5",
