configurable token lifetimes

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -71,6 +71,8 @@
     "Clients": [
       {
         "ClientId": "web_client",
+        "AccessTokenLifetime": 3600,
+        "RefreshTokenLifetime": 86400000,
         "Permissions": [
           "ept:authorization",
           "ept:token",
