--- a/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
+++ b/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="NJsonSchema" Version="10.6.4" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
     <PackageReference Include="OpenIddict.Server" Version="3.1.1" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.12.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
     <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.0.0" />
