Shaddix.OpenIddict.ExternalAuthentication

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -68,8 +68,8 @@
       "Base64Certificate": "",
       "Password": ""
     },
-    "Clients": [
-      {
+    "Clients": {
+      "web_client": {
         "ClientId": "web_client",
         "AccessTokenLifetime": 3600,
         "RefreshTokenLifetime": 86400000,
@@ -87,7 +87,7 @@
           "https://localhost:5001/auth/openid-callback"
         ]
       }
-    ],
+    },
     "Password": {
       "RequireDigit": false,
       "RequireUppercase": false,
