Adjust URL in appsettings

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -124,7 +124,7 @@
     }
   },
   "General": {
-    "SiteUrl": "https://templateapp.mcc-soft.de"
+    "SiteUrl": "https://templateapp.mcc-tomsk.de"
   },
   "DefaultUser": {
     "Username": "admin",
@@ -137,7 +137,7 @@
     "Secret": "fDmp1K2YveBbfDmp"
   },
   "Email": {
-    "SiteUrl": "https://templateapp.mcc-soft.de",
+    "SiteUrl": "https://templateapp.mcc-tomsk.de",
     "Host": "smtp.gmail.com",
     "Port": 465,
     "IsSecureConnection": true,
