cleanup, try out Vite

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-  ]
+    "src",
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
