--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,9 @@
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.16",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "@vitejs/plugin-react": "^1.3.0",
     "customize-cra": "1.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-react-app": "^6.0.0",
@@ -86,10 +88,15 @@
     "react-devtools": "4.13.5",
     "redux-devtools-extension": "2.13.9",
     "replace": "^1.2.1",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "vite": "^2.9.5",
+    "vite-plugin-react-svg": "0.2.0",
+    "vite-plugin-svgr": "1.1.0",
+    "vite-tsconfig-paths": "3.4.1"
   },
   "scripts": {
     "start": "PORT=3148 react-app-rewired start",
+    "start-vite": "PORT=3149 vite",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
