--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "concurrently": "6.5.1",
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "i18next": "21.6.0",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-http-backend": "1.3.2",
@@ -90,14 +90,16 @@
     "replace": "^1.2.1",
     "typescript": "4.6.3",
     "vite": "^2.9.5",
+    "vite-plugin-environment": "1.1.1",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "1.1.0",
     "vite-tsconfig-paths": "3.4.1"
   },
   "scripts": {
-    "start": "PORT=3148 react-app-rewired start",
+    "start": "REACT_APP_VERSION=$npm_package_version PORT=3148 react-app-rewired start",
     "start-vite": "PORT=3149 vite",
-    "build": "react-app-rewired build",
+    "build": "REACT_APP_VERSION=$npm_package_version react-app-rewired build",
+    "build-vite": "vite build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "typecheck": "tsc",
