--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "concurrently": "6.5.1",
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "16.0.0",
     "i18next": "21.6.0",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-http-backend": "1.3.2",
@@ -36,7 +36,7 @@
     "query-string": "7.1.1",
     "rc-tooltip": "5.1.1",
     "react": "17.0.2",
-    "react-copy-to-clipboard": "^5.0.3",
+    "react-copy-to-clipboard": "5.1.0",
     "react-dom": "17.0.2",
     "react-dropzone": "12.0.4",
     "react-hook-form": "7.19.0",
@@ -46,15 +46,14 @@
     "react-query": "3.34.20",
     "react-query-swagger": "13.16.5",
     "react-redux": "7.2.5",
-    "react-router": "6.0.1",
-    "react-router-dom": "6.0.1",
-    "react-scripts": "5.0.1",
-    "react-table": "^7.7.0",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "react-table": "7.7.0",
     "react-textarea-autosize": "^8.3.2",
     "react-tooltip": "^4.2.21",
     "redux": "4.1.0",
     "redux-persist": "6.0.0",
-    "sass": "^1.42.1",
+    "sass": "1.51.0",
     "source-map-explorer": "^2.5.2",
     "throttle-debounce": "^3.0.1",
     "use-query-params": "^1.2.3",
@@ -72,7 +71,6 @@
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "customize-cra": "1.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "2.23.4",
@@ -83,8 +81,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.4.1",
-    "react-app-rewired": "2.1.8",
+    "prettier": "2.6.2",
     "react-devtools": "4.13.5",
     "redux-devtools-extension": "2.13.9",
     "replace": "^1.2.1",
@@ -96,19 +93,15 @@
     "vite-tsconfig-paths": "3.4.1"
   },
   "scripts": {
-    "start": "REACT_APP_VERSION=$npm_package_version PORT=3148 react-app-rewired start",
-    "start-vite": "PORT=3149 vite",
-    "build": "REACT_APP_VERSION=$npm_package_version react-app-rewired build",
-    "build-vite": "vite build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
+    "start": "PORT=3149 vite",
+    "build": "vite build",
     "typecheck": "tsc",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /runtime:Net60 /input:http://localhost:48728/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn replace \"this\\.(\\\\w*?)\\.toISOString\\\\(\\\\) : <any>undefined\" \"this.\\$1.toISOString() : this.\\$1\" src/services/api/api-client.ts  && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
     "generate-api-client-dotnet": "nswag openapi2csclient /runtime:Net60 /input:http://localhost:48728/swagger/v1/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
     "analyze-statoscope": "STATS=1 react-app-rewired build",
     "analyze-sourcemap-size": "source-map-explorer build/static/js/*.js",
-    "npm-start": "react-app-rewired start"
+    "npm-start": "yarn start"
   },
   "eslintConfig": {
     "extends": [
