--- a/webapi/Lib/IntegreSqlClient/MccSoft.IntegreSqlClient/MccSoft.IntegreSqlClient.csproj
+++ b/webapi/Lib/IntegreSqlClient/MccSoft.IntegreSqlClient/MccSoft.IntegreSqlClient.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
     <PackageReference Include="Npgsql" Version="6.0.3" />
     <PackageReference Include="System.Text.Json" Version="6.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
   </ItemGroup>
 
 </Project>
