--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,7 +86,7 @@
     "redux-devtools-extension": "2.13.9",
     "replace": "^1.2.1",
     "typescript": "4.6.3",
-    "vite": "^2.9.5",
+    "vite": "2.9.8",
     "vite-plugin-environment": "1.1.1",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "1.1.0",
