--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react": "^8.65.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@lottiefiles/jlottie": "^1.2.1",
-    "@material-ui/core": "^4.12.4",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@sentry/react": "^6.19.6",
-    "@sentry/tracing": "^6.19.6",
-    "@statoscope/webpack-plugin": "^5.20.1",
-    "@tippyjs/react": "^4.2.6",
-    "@types/react-copy-to-clipboard": "^5.0.2",
-    "@types/react-paginate": "^7.1.1",
-    "@types/react-table": "^7.7.10",
+    "@fluentui/react": "8.71.0",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "@lottiefiles/jlottie": "1.2.1",
+    "@material-ui/core": "4.12.4",
+    "@reduxjs/toolkit": "1.8.2",
+    "@sentry/react": "6.19.7",
+    "@sentry/tracing": "6.19.7",
+    "@statoscope/webpack-plugin": "5.20.1",
+    "@tippyjs/react": "4.2.6",
+    "@types/react-paginate": "7.1.1",
+    "@types/react-table": "7.7.10",
     "axios": "0.26.1",
     "axios-auth-refresh": "3.2.2",
     "clsx": "1.1.1",
@@ -36,7 +35,6 @@
     "query-string": "7.1.1",
     "rc-tooltip": "5.1.1",
     "react": "17.0.2",
-    "react-copy-to-clipboard": "5.1.0",
     "react-dom": "17.0.2",
     "react-dropzone": "12.0.4",
     "react-hook-form": "7.19.0",
@@ -54,9 +52,9 @@
     "redux": "4.1.0",
     "redux-persist": "6.0.0",
     "sass": "1.51.0",
-    "source-map-explorer": "^2.5.2",
-    "throttle-debounce": "^3.0.1",
-    "use-query-params": "^1.2.3",
+    "source-map-explorer": "2.5.2",
+    "throttle-debounce": "3.0.1",
+    "use-query-params": "1.2.3",
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
@@ -68,11 +66,11 @@
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.16",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "@vitejs/plugin-react": "1.3.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-react-app": "6.0.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-jest-formatting": "3.0.0",
