--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,8 +83,9 @@
     "react-devtools": "4.13.5",
     "redux-devtools-extension": "2.13.9",
     "replace": "^1.2.1",
+    "rollup-plugin-visualizer": "5.6.0",
     "typescript": "4.6.3",
-    "vite": "2.9.8",
+    "vite": "2.9.9",
     "vite-plugin-environment": "1.1.1",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "1.1.0",
@@ -93,6 +94,7 @@
   "scripts": {
     "start": "PORT=3149 vite",
     "build": "vite build",
+    "build-scss-for-razor": "sass src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
     "typecheck": "tsc",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /runtime:Net60 /input:http://localhost:48728/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn replace \"this\\.(\\\\w*?)\\.toISOString\\\\(\\\\) : <any>undefined\" \"this.\\$1.toISOString() : this.\\$1\" src/services/api/api-client.ts  && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
